--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -24,6 +24,8 @@
   background-image: url(../images/vintage_player_2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 .artist-display {
@@ -36,7 +38,7 @@ header {
   align-items: center;
   justify-content: space-between;
   align-items: center;
-  padding: 1px 5rem;
+  padding: 2px 5rem;
   background-color: black;
   border-bottom: 2px solid var(--gg-secondary-color);
   position: fixed;
@@ -48,10 +50,11 @@ header {
 /* g2g logo */
 .g2g-logo {
   max-width: 4rem;
+  height: fit-content;
 }
 
 .g2g-logo img {
-  width:100%;
+  width: 100%;
   object-fit: cover;
   cursor: pointer;
 }
@@ -122,6 +125,20 @@ header {
   color: var(--gg-secondary-color);
 }
 
+/* toggle button */
+
+header .toggle-btn {
+  color: var(--gg-white-primary);
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: none;
+}
+
+header .toggle-btn:hover {
+  color: var(--gg-secondary-color);
+  transition: all ease-in-out 0.3s;
+}
+
 /* music title and play button */
 .intro-music {
   display: flex;
@@ -146,6 +163,7 @@ header {
 
 .music-title {
   text-align: right;
+  width: fit-content;
 }
 
 .music-title h1 {
@@ -157,6 +175,7 @@ header {
 
 .music-title h5 {
   color: white;
+  width: fit-content;
 }
 
 /* highlight of song lyrics */
@@ -201,8 +220,7 @@ header {
 /* about and logo part of the about */
 
 .about-logo {
-    display: flex;
-    
+  display: flex;
 }
 
 .about-p {
@@ -212,7 +230,6 @@ header {
   font-size: 20px;
   font-weight: 300;
 }
-
 
 /* contact section styli */
 /* Header styles */
@@ -274,3 +291,125 @@ button[type="submit"]:hover {
   background-color: #1c1c1c;
 }
 
+/* ============================================ */
+/* ============================================ */
+/* ==== g2g website: responsiveness styling ====*/
+/* ============================================ */
+/* ============================================ */
+
+/* responsive to mobile devices */
+@media (min-width: 319px) and (max-width: 480px) {
+  .hero {
+    background-size: cover; /* Ensure image covers entire screen */
+    background-attachment: fixed;
+  }
+  .nav-bar,
+  .social-media {
+    display: none;
+  }
+
+  header {
+    padding: 10px;
+  }
+
+  .g2g-logo {
+    max-width: 4rem;
+  }
+
+  header .toggle-btn {
+    display: inline-block;
+  }
+  .intro-music {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .intro-music h1 {
+    font-size: 5rem;
+  }
+
+  .intro-music h5 {
+    margin: 0 auto;
+    padding: 15px 0px;
+    font-size: 20px;
+  }
+  .listen-now a {
+    background-color: var(--gg-black-primary);
+    color: white;
+    border-bottom-color: black;
+    padding: 3px;
+    font-weight: 500;
+  }
+
+  .listen-now a:hover {
+    background-color: #333;
+    scale: 2;
+  }
+
+}
+
+/* responsive to tablets and ipads */
+@media (min-width: 481px) and (max-width: 1200px) {
+  .hero {
+    background-size: cover; /* Ensure image covers entire screen */
+    background-attachment: fixed;
+  }
+  .nav-bar,
+  .social-media {
+    display: none;
+  }
+
+  header {
+    padding: 10px;
+  }
+
+  .g2g-logo {
+    max-width: 4rem;
+  }
+
+  header .toggle-btn {
+    display: inline-block;
+  }
+  .intro-music {
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+  }
+  .intro-music h1 {
+    font-size: 10rem;
+  }
+
+  .intro-music h5 {
+    margin: 0 auto;
+    padding: 15px 0px;
+    font-size: 20px;
+  }
+  .listen-now a {
+    background-color: var(--gg-black-primary);
+    color: white;
+    border-bottom-color: black;
+    padding: 3px;
+    font-weight: 500;
+  }
+
+  .listen-now a:hover {
+    background-color: #333;
+    scale: 2;
+  }
+}
+
+/* responsive to PCs and macs */
+@media (min-width: 1201px) and (max-width: 1600px) {
+  .hero {
+    background-color: limegreen;
+  }
+}
+
+/* responsive to desktops */
+@media (min-width: 1601px) {
+  .hero {
+    background-color: seagreen;
+  }
+}
